fix: if the reify process fails, the connector should be stopped and reported as failed